[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/kenney_pixelplatformer/Tiles/tile_0090.png" type="Texture" id=1]
[ext_resource path="res://join_scene/Area2D.gd" type="Script" id=2]
[ext_resource path="res://join_scene/join.gd" type="Script" id=3]
[ext_resource path="res://addons/material_node/GameMaterial.gd" type="Script" id=6]

[node name="join" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 3 )

[node name="join" type="Sprite" parent="."]
position = Vector2( 2, 1.00002 )
scale = Vector2( 3.85243, 4.16146 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 33, 11, 35, -10, -34, -19, -30, 25 )

[node name="input1_pipe" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( -264, -17, -26, -15 )
default_color = Color( 0.180392, 0.792157, 0.145098, 1 )

[node name="input2_pipe" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( -316, 24, -27, 16 )
default_color = Color( 0.180392, 0.792157, 0.145098, 1 )

[node name="MaterialNode" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="material" type="Sprite" parent="MaterialNode"]
position = Vector2( -2, -3.57628e-07 )
scale = Vector2( 1.77778, 1.94444 )
z_index = 1

[node name="name" type="RichTextLabel" parent="MaterialNode"]
margin_left = 13.5625
margin_top = -19.25
margin_right = 53.5625
margin_bottom = 20.75
__meta__ = {
"_edit_use_anchors_": false
}
